# simw-top

./: Android.mk  CMakeLists.txt  SCR.txt  git_commit_info.txt  version_info.txt
akm/: Readme.rst  fsl_sss_ftr.h
akm/doc/: I2C-operation.uml  keymaster_features.rst  stack-with-se050.rst  trust_provisioning.rst  trust_provisioning_example.java
binaries/: Readme.txt
demos/: CMakeLists.txt  version_info.txt
demos/a71ch/: CMakeLists.txt  ex_a71ch_sss_aes_wrap_key.c  ex_a71ch_sss_ecc.c
demos/apdu_player/: CMakeLists.txt  apdu_player.c
demos/ksdk/: CMakeLists.txt
demos/ksdk/ibm_watson/: CMakeLists.txt  Readme.rst  ibm_client_credential_keys.h  ibm_watson_default_root_certificate.h  ibm_watson_demo_Main_lwip.c  ibm_watson_iot_config.h
demos/linux/sss_pkcs11/: CMakeLists.txt  Readme.rst  greengrass_client_credential_keys.h
demos/lpc55s/: CMakeLists.txt
demos/lpc55s/ex/: CMakeLists.txt
demos/lpc55s/ex/puf_inject_scp03/: CMakeLists.txt  Readme.rst  puf_inject_scp03.c  puf_inject_scp03.h
demos/lpc55s/ex/puf_rotate_scp03/: CMakeLists.txt  Readme.rst  output_log.rst.txt
demos/lpc55s/ex/puf_rotate_scp03/nonsecure/: CMakeLists.txt  puf_rotate_scp03_ns.c
demos/lpc55s/ex/puf_rotate_scp03/secure/: CMakeLists.txt  puf_rotate_scp03_s.c  puf_rotate_scp03_s.h  veneer_table.c
demos/lpc55s/ex/puf_se05x_sbl/: CMakeLists.txt  Readme.rst
demos/lpc55s/ex/puf_se05x_sbl/app_ns/: CMakeLists.txt  ns_channel.c  ns_channel.h  session_ns.c
demos/lpc55s/ex/puf_se05x_sbl/app_s/: CMakeLists.txt  main.c  veneer_table.c
demos/lpc55s/ex/puf_se05x_sbl/common/: veneer_table.h
demos/lpc55s/ex/puf_se05x_sbl/sbl_s/: CMakeLists.txt  memory.c  memory.h  puf_se05x_sbl_s.c  se05x_bind.c  se05x_bind.h
demos/se05x/: CMakeLists.txt
demos/se05x/pkcs11/: CMakeLists.txt
demos/test_Crypto/: CMakeLists.txt  test_Crypto.c  test_Crypto.h  test_mac_multiStep.c
demos/tfm_port/: mbedcrypto_mcux_casper.c  mbedcrypto_mcux_config.h  mbedcrypto_mcux_entropy.c  mbedcrypto_mcux_hw_config.h
doc/: a71ch.html  appendix.html  cli-tool.html  dev-platforms.html  edgelock2go-agent.html  folder-structure.html  genindex.html  index.html  organization-of-documentation.html  search.html  searchindex.js  sss-apis.html  sw-prerequisites.html  toc.html
doc/_static/: documentation_options.js
doc/a71ch/: a71ch_configure_tool.html  a71ch_legacy_hlse_api.html  a71ch_legacy_host_api.html  a71ch_miscellaneous.html  a71ch_sss.html
doc/akm/: Readme.html
doc/appendix/: apdu_write_to_buffer.html  glossary.html  ide_mcux.html  multithread_support.html  platfscp.html  rjct_server.html  se05x_apis.html  se_uid.html  upload_se05x_using_pycli.html  vcom.html  version_info.html  vs2019-setup.html
doc/building/: cmake.html  frdm-k64f-cmake.html  frdm-k64f-sdk.html  imx6.html  index.html  rpi3.html  windows.html
doc/changes/: index.html  pending.html  v02_05_00_to_v02_03_00.html  v02_06_00.html  v02_07_00.html  v02_09_00.html  v02_10_00.html  v02_11_00.html  v02_11_01.html  v02_11_03.html  v02_12_00.html  v02_14_00.html  v02_15_00.html  v02_16_00.html  v02_16_01.html  v03_00_02.html  v03_00_03.html  v03_00_04.html  v03_00_05.html  v03_00_06.html  v03_01_00.html  v03_01_01.html  v03_03_00.html  v04_00_00.html  v04_00_01.html  v04_01_00.html  v04_01_01.html  v04_01_03.html  v04_02_00.html  v04_03_00.html
doc/demos/: demo-list.html  eou_config_aws.html  eou_config_azure.html  eou_config_gcp.html  eou_config_ibm.html  index.html
doc/dev-platforms/: platform_1060rt.html  platform_android.html  platform_frdm_k64f.html  platform_imx6_linux.html  platform_imx8_linux.html  platform_imxrt1170.html  platform_lpc55s.html
doc/html/: .buildinfo
doc/plugins/: akm.html  index.html  pkcs11.html
doc/scripts/: cmake_options.html
doc/semslite/: README.html
doc/stack/: feature-file.html  features.html  i2cm.html  index.html  key-id-range.html  keyids-used.html  logging.html  param_checks.html  performance_se050.html  se05xfeatures.html  secure_boot.html
doc/tst/: README.html
ext/: CMakeLists.txt  mbed-crypto.cmake  mbedtls.cmake  mbedtlsAkmLists.mk  nxpnfcrdlib.cmake  open62541.cmake  open62541_lib.cmake
ext/JRCPProxyConsole/: CMakeLists.txt
ext/jrcplib/: CMakeLists.txt
ext/open62541/: CMakeLists.txt  cppcheck-suppressions.txt
hostlib/: version_info.txt
hostlib/hostLib/: CMakeLists.txt
projects/cmake_project_evkmimxrt1060/: .cproject  .project
projects/cmake_project_evkmimxrt1170/: .cproject  .project
projects/cmake_project_frdmk64f/: .cproject  .project
projects/cmake_project_lpc55s/: .cproject  .project
projects/cmake_project_lpc55s_ns/: .cproject  .project
projects/cmake_project_lpc55s_s/: .cproject  .project
pycli/: requirements.txt
scripts/: cmake_options.cmake  cmake_options.mak.in  cmake_options.py  cmake_options.rst  cmake_options.sh  cmake_options_installed.cmake.in  cmake_options_values.cmake  cmake_options_values.rst.txt  env_setup.bat  env_setup.ps1  env_setup.sh  native.cmake
semslite/ex/sems_lite_ex_update/: CMakeLists.txt  Update-NXP-IoT-Applet-A564-7.3.c  Update-NXP-IoT-Applet-A564-7.3.h  Update-NXP-IoT-Applet-A8FA-7.3.c  Update-NXP-IoT-Applet-A8FA-7.3.h  Update_NXP_SE051_IoT_A564_Applet_7.2.c  Update_NXP_SE051_IoT_A564_Applet_7.2.h  sems_lite_ex_update.c
sss/: CMakeLists.txt  version_info.txt
sss/plugin/openssl_provider/: CMakeLists.txt
sss/plugin/openssl_provider/provider/src/: sssProvider_ecdh.c  sssProvider_ecdsa.c  sssProvider_file_store.c  sssProvider_key_mgmt_ec.c  sssProvider_key_mgmt_rsa.c  sssProvider_main.c  sssProvider_main.h  sssProvider_rand.c  sssProvider_rsa.c  sssProvider_store.c
sss/plugin/openssl_provider/scripts/: ecc_all.py  openssl_EccSign.py  openssl_Ecdh.py  openssl_RSA.py  openssl_provisionEC.py  openssl_provisionRSA.py  openssl_rnd.py  openssl_util.py  readme.rst  rsa_all.py
sss/plugin/openssl_provider/scripts/doc/: openssl_EccSign.rst.txt  openssl_Ecdh.rst.txt  openssl_RSA.rst.txt  openssl_rnd.rst.txt
sss/plugin/openssl_provider/scripts/input_data/: input_data_100_bytes.txt  input_data_1024_bytes.txt  input_data_2048_bytes.txt
(+379 files in other folders)
