#
# Copyright 2021 NXP
# SPDX-License-Identifier: Apache-2.0
#

IF(SSS_HAVE_SE05X_AUTH_PLATFSCP03 AND (NOT SSS_HAVE_HOST_LPCXPRESSO55S))
    ADD_SUBDIRECTORY(puf_se05x_sbl)
    ADD_SUBDIRECTORY(puf_rotate_scp03)
ENDIF()
IF(SSS_HAVE_HOST_LPCXPRESSO55S)
    ADD_SUBDIRECTORY(puf_inject_scp03)
ENDIF()
