#
# Copyright 2019,2020 NXP
# SPDX-License-Identifier: Apache-2.0
#
#

PROJECT(applet_update)

FILE(
    GLOB
    ${PROJECT_NAME}_A8FA_files
    sems_lite_ex_update.c
    Update-NXP-IoT-Applet-A8FA-7.3.c
    Update-NXP-IoT-Applet-A8FA-7.3.h
)

FILE(
    GLOB
    ${PROJECT_NAME}_A564_files
    sems_lite_ex_update.c
    Update-NXP-IoT-Applet-A564-7.3.c
    Update-NXP-IoT-Applet-A564-7.3.h
)

FILE(
    GLOB
    ${PROJECT_NAME}_A564_7.2_files
    sems_lite_ex_update.c
    Update_NXP_SE051_IoT_A564_Applet_7.2.c
    Update_NXP_SE051_IoT_A564_Applet_7.2.h
)

ADD_EXECUTABLE(A8FA_${PROJECT_NAME}_7.3 ${KSDK_STARTUP_FILE} ${${PROJECT_NAME}_A8FA_files})
ADD_EXECUTABLE(A564_${PROJECT_NAME}_7.3 ${KSDK_STARTUP_FILE} ${${PROJECT_NAME}_A564_files})
ADD_EXECUTABLE(A564_${PROJECT_NAME}_7.2 ${KSDK_STARTUP_FILE} ${${PROJECT_NAME}_A564_7.2_files})


TARGET_LINK_LIBRARIES(A8FA_${PROJECT_NAME}_7.3 SEMS_LITE_AGENT_APIs)
TARGET_LINK_LIBRARIES(A564_${PROJECT_NAME}_7.3 SEMS_LITE_AGENT_APIs)
TARGET_LINK_LIBRARIES(A564_${PROJECT_NAME}_7.2 SEMS_LITE_AGENT_APIs)

TARGET_INCLUDE_DIRECTORIES(A8FA_${PROJECT_NAME}_7.3 PUBLIC ../inc)
TARGET_INCLUDE_DIRECTORIES(A564_${PROJECT_NAME}_7.3 PUBLIC ../inc)
TARGET_INCLUDE_DIRECTORIES(A564_${PROJECT_NAME}_7.2 PUBLIC ../inc)

CREATE_BINARY(A8FA_${PROJECT_NAME}_7.3)
CREATE_BINARY(A564_${PROJECT_NAME}_7.3)
CREATE_BINARY(A564_${PROJECT_NAME}_7.2)
